--- a/config/packages/_sylius.yaml
+++ b/config/packages/_sylius.yaml
@@ -133,6 +133,7 @@ sylius_product:
         product:
             classes:
                 model: App\Entity\Product\Product
+                repository: App\Repository\Product\ProductRepository
             translation:
                 classes:
                     model: App\Entity\Product\ProductTranslation
@@ -256,6 +257,10 @@ sylius_theme:
 sylius_grid:
     grids:
         sylius_admin_product:
-            fields:
-                code:
-                    enabled: false
+            driver:
+                name: doctrine/orm
+                options:
+                    class: "%sylius.model.product.class%"
+                    repository:
+                        method: createListQueryBuilder
+                        arguments: [ "expr:service('sylius.context.locale').getLocaleCode()", $taxonId, "expr:service('security.token_storage').getToken()" ]
